--- a/badger_hive/index.html
+++ b/badger_hive/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body>
+<body style="background-color:#FFD769;">
     <div class="container" style="height: 454px;">
         <div class="col" style="width: 446px;height: 443px;margin-top: 50px;margin-bottom: 0px;margin-right: 0px;margin-left: 245px;">
             <h1 style="padding-left: 0;padding-top: 39px;padding-bottom: 7px;">Badger Hive Management System</h1>
